# particleSystem2.0

./: build.gradle  local.properties
app/: build.gradle  local.properties
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 1shader.fs  1shader.vs  2shader.vs  3shader.fs  3shader.vs
app/src/main/cpp/: BufferInit.cpp  BufferInit.h  CMakeLists.txt  Constants.h  InitEngine.cpp  World.cpp  World.h  assetManager.cpp  assetManager.h  draw.cpp  draw.h  errorChecker.cpp  errorChecker.h  shader.cpp  shader.h  uniform.cpp  uniform.h
app/src/main/java/com/android/gles3jni/: GLES3JNIActivity.java  GLES3JNILib.java  GLES3JNIView.java  MyStuff.java  ParticleSystem.java  ParticleSystemLib.java  ParticleSystemView.java  inputs.java
app/src/main/res/layout/: layout.xml
app/src/main/res/layout-sw600dp/: layout.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
